--- a/app/scss/modules/_running-list.scss
+++ b/app/scss/modules/_running-list.scss
@@ -34,6 +34,12 @@ ul.running-list--items {
 
 ul.running-list--item-detail {
 
+	li > div.active {
+		color: $color-neutral-60;
+
+		.details { color: $white; }
+	}
+
 	div:hover {
 
 		.details { color: $color-neutral-60; }
@@ -42,7 +48,7 @@ ul.running-list--item-detail {
 	.details {
         display: none;
         padding: 0 $spacing/2;
-        color: $color-neutral-10;
+        color: $color-neutral-30;
         font-size: $font-size-20
 
         span + span {
