--- a/app/scss/components/modules/select.scss
+++ b/app/scss/components/modules/select.scss
@@ -52,7 +52,7 @@
         font-size: 1rem;
         box-shadow: 0 1px 4px 0 rgba($color-neutral-60, 0.5);
 
-        border: $color-neutral-30 0.2rem solid;
+        border: $color-neutral-40 4px solid;
         border-radius: .3em;
         opacity: 1;
 
@@ -70,7 +70,7 @@
 
         &:before {
             border-color: rgba(255, 225, 255, 0);
-            border-bottom-color:  $color-neutral-30;
+            border-bottom-color:  $color-neutral-40;
             border-width: 0.8rem;
             margin-left: -1rem;
         }
