Create an initial setup for the adding of a scenario in the editor, and adjust styling accordingly

--- a/app/scss/shared-components/_story-list.scss
+++ b/app/scss/shared-components/_story-list.scss
@@ -81,6 +81,27 @@ li.story-list--header {
 		background: #c8ced0;
 	}
 
+    .story-list--tools {
+
+        background: $color-brand-60;
+        color: $white;
+
+        .twitter-typeahead {
+            @include display(flex);
+            @include flex(1 1 auto);
+            @include align-items(center);
+        }
+
+        .actions {
+            max-width: fit-content;
+        }
+
+        input {
+            @include flex(1 1 auto);
+            margin: 0;
+        }
+    }
+
 }
 
 ul.story-list--stories {
