--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -23,7 +23,7 @@
     <div class="content">
         <ul class="story-list" story-collapse>
             <li class="list-item prologue story-list--header">
-                <div class="header selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:0})}"
+                <div class="header" ng-class="{'active':story.selectedItem.isItemSelected({id:story.collections.prologue.id})}"
                      ng-click="story.selectedItem.setSelectedItem(null)">
                     <div class="prefix">
                         <i class="fa fa-bars" data-toggle="collection"></i>
@@ -35,7 +35,7 @@
                 <scenario-view scenarios="story.model.prologue"></scenario-view>
             </li>
             <li class="list-item scenarios story-list--header">
-                <div class="header selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:1})}"
+                <div class="header" ng-class="{'active':story.selectedItem.isItemSelected({id:story.collections.scenarios.id})}"
                      ng-click="story.selectedItem.setSelectedItem(null)">
                     <div class="prefix">
                         <i class="fa fa-bars" data-toggle="collection"></i>
@@ -43,31 +43,33 @@
                     <div class="title">
                         <span class="separate" translate="WRITER.STORIES.LIST.SCENARIOS"></span>
                     </div>
-                    <div class="actions">
-                        <button ng-click="story.add()">
+                    <div class="actions" ng-show="!story.collections.scenarios.isAdding">
+                        <button ng-click="story.add(story.collections.scenarios)">
                             <i class="fa fa-plus"></i>
                             <span translate="WRITER.STORIES.NEW_SCENARIO"></span>
                         </button>
                     </div>
                 </div>
                 <scenario-view scenarios="story.model.scenarios"></scenario-view>
-                <div class="tools">
-                    <input class="typeahead" type="text" placeholder="{{story.inputPlaceholder}}" sf-typeahead
-                           options="story.typeAheadOptions" datasets="story.stepsDataset" ng-model="story.inputValue">
+                <div ng-show="story.collections.scenarios.isAdding" class="story-list--tools selectable"
+                     ng-class="{'active':story.selectedItem.isItemSelected({id:story.collections.scenarios.id+'-new'})}"
+                     ng-click="story.selectedItem.setSelectedItem({id:story.collections.scenarios.id+'-new'})">
+                    <div class="prefix">
+                        <i class="fa fa-times" ng-click="story.clear(story.collections.scenarios)"></i>
+                    </div>
+                    <input class="typeahead" type="text" placeholder="{{'WRITER.STORIES.ENTER_SCENARIO_TITLE' | translate}}" sf-typeahead
+                           options="story.typeAheadOptions" datasets="story.stepsDataset" ng-model="story.collections.scenarios.inputValue">
                     <div class="select"></div>
                     <div class="actions">
-                        <button ng-show="story.isString(story.inputValue)">
-                            <i class="fa fa-chain-broken"></i>
-                            <span>Add pending</span>
-                        </button>
-                        <button ng-click="story.insertObject()" ng-hide="story.isString(story.inputValue)">
-                            <span>Insert</span>
+                        <button ng-click="story.insertObject()">
+                            <i class="fa fa-plus"></i>
+                            <span translate="WRITER.STORIES.INSERT"></span>
                         </button>
                     </div>
                 </div>
             </li>
             <li class="list-item epilogue story-list--header">
-                <div class="header selectable" ng-class="{'active':story.selectedItem.isItemSelected({id:2})}"
+                <div class="header" ng-class="{'active':story.selectedItem.isItemSelected({id:story.collections.epilogue.id})}"
                      ng-click="story.selectedItem.setSelectedItem(null)">
                     <div class="prefix">
                         <i class="fa fa-bars" data-toggle="collection"></i>
