--- a/app/views/modules/runner/available.html
+++ b/app/views/modules/runner/available.html
@@ -1,11 +1,8 @@
-<div class="top-filter ic ng-hide filter-2 selectable" ng-show="filter.loaded" ng-class="{'active':available.selectedItem.isNoItemSelected()}" ng-click="available.selectedItem.clearSelectedItem()" ng-controller="AvailableFilterCtrl as filter">
-    <i class="fa fa-bars" ng-click="toggleAll()"></i>
+<header class="ng-hide" ng-show="filter.loaded" ng-controller="AvailableFilterCtrl as filter">
     <div class="filters">
         <i class="fa fa-folder-open-o" ng-class="{'inactive':!available.filter.set.ids.length}" ng-click="filter.expand.set = !filter.expand.set"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET" ng-hide="!available.filter.set.ids.length && !filter.expand.set"></span>
         <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" placeholder="filter.setPlaceholder" default="filter.setsDefault" ng-hide="!filter.expand.set" max-items="{{::available.maxSelectItems}}"></div>
         <i class="fa fa-tag" ng-class="{'inactive':!available.filter.tag.ids.length}" ng-click="filter.expand.tag = !filter.expand.tag"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG" ng-hide="!available.filter.tag.ids.length && !filter.expand.tag"></span>
         <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" placeholder="filter.tagPlaceholder" multiple="true" default="filter.tagsDefault" ng-hide="!filter.expand.tag" max-items="{{::available.maxSelectItems}}"></div>
     </div>
     <div class="actions">
@@ -16,7 +13,7 @@
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
         <div class="select" filter-select="available.environments" filter-id="available.filter.env.id" placeholder="available.envPlaceholder" synchronize="true" max-items="{{::available.maxSelectItems}}"></div>
     </div>
-</div>
+</header>
 <div class="search ng-hide" ng-show="initialized()" search></div>
 <ul id="story-list" story-collapse class="main-content-list story-list filter-2">
     <li class="ic cl list-animate story-list--header" ng-repeat="book in filteredBooks = (storybooks() | storybookPaginationFilter:available.currentPage:available.maxScenarios) track by book.id">
