--- a/app/scss/components/modules/select.scss
+++ b/app/scss/components/modules/select.scss
@@ -21,9 +21,9 @@
 
         i {
             position: absolute;
-            right: .4em * 1.5;
+            right: .6em;
             top: 25%;
-            margin-left: .4em;
+            margin: 0;
             color: darken($color-neutral-60, 5%);
         }
 
