--- a/app/scss/shared-components/_icons.scss
+++ b/app/scss/shared-components/_icons.scss
@@ -1,13 +1,14 @@
-// =========== Icons
+// =========== Icons 
 
-svg.icon {
-    height: 16px;
-    width: 16px;
-    display: inline-block;
+// svg.icon {
+//     height: 16px;
+//     width: 16px;
+//     display: inline-block;
 
-    &.is-inline {
-        position: relative;
-        top: 0.15rem;
-        margin: 0 0.25rem;
-    }
-}
+//     &.is-inline {
+//         position: relative;
+//         top: 0.15rem;
+//         margin: 0 0.25rem;
+//     }
+// }
+
