filers moved and bourbon neat is gone

--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -36,6 +36,12 @@ header {
 
 	    }
 
-	    > div { margin-right: $spacing*2; }
+	    > div { margin-right: $spacing; }
+
+	    .select { 
+	    	@media (min-width: $breakpoint-30) { 
+	    		display: block!important; 
+	    	}
+	    }
 	}
 }
