--- a/app/scss/components/intro.scss
+++ b/app/scss/components/intro.scss
@@ -1,9 +1,20 @@
 .intro {
-    @include outer-container;
+    max-width: auto;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     top: 50%;
     margin-top: -12em;
     max-width: 28em;
+
+    &:before, 
+    &:after {
+        content: " ";
+        display: table;
+    }
+
+    &:after { clear: both; }
+
 
     h1 {
         font-size: modular-scale(1, 2rem, $octave);
