--- a/app/scss/components/preloader.scss
+++ b/app/scss/components/preloader.scss
@@ -1,10 +1,22 @@
 .loader {
-    @include outer-container;
+    max-width: auto;
+    margin-left: auto;
+    margin-right: auto;
+
+    
     position: relative;
     top: 18em;
     max-width: 28em;
     text-align: center;
+	
+	&:before, 
+    &:after {
+        content: " ";
+        display: table;
+    }
 
+    &:after { clear: both; }
+    
     span,
     i {
         font-size: modular-scale(1, 1rem, $perfect-fifth);
