--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -551,12 +551,6 @@ div.layout {
   .l-right {
     float: right; } }
 
-html {
-  box-sizing: border-box; }
-
-*, *::after, *::before {
-  box-sizing: inherit; }
-
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -657,31 +651,6 @@ button.button--alert {
   button.button--alert:active,
   button.button--alert:focus {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); }
-
-figure {
-  display: inline-block;
-  margin-bottom: 1.5rem;
-  width: 100%; }
-  @media (min-width: 590px) {
-    figure.is-left {
-      clear: left;
-      float: left;
-      padding-right: 1.5rem;
-      max-width: 50%;
-      width: auto; } }
-  @media (min-width: 590px) {
-    figure.is-right {
-      clear: right;
-      float: right;
-      padding-left: 1.5rem;
-      max-width: 50%;
-      width: auto; } }
-  figure img {
-    display: block;
-    max-width: 100%;
-    margin: auto; }
-  figure figcaption {
-    color: #52656E; }
 
 input[type=search] {
   -webkit-appearance: none;
@@ -816,122 +785,6 @@ label {
   label abbr {
     display: none; }
 
-.label, .label--neutral, .label--success, .label--alert {
-  border-radius: 0.125rem;
-  font-size: 0.75rem;
-  font-weight: bold;
-  padding: 0.1rem 0.25rem; }
-
-.label {
-  background: #59bba3;
-  color: #fff; }
-
-.label--neutral {
-  background: #C3CACE;
-  color: #333E42; }
-
-.label--success {
-  background-color: #ee7147;
-  color: #fff; }
-
-.label--alert {
-  background-color: #e7663f;
-  color: #fff; }
-
-ul.list,
-ol.list {
-  list-style: none; }
-  ul.list li,
-  ol.list li {
-    padding: .3rem 0 .3rem 2rem;
-    position: relative; }
-    @media (min-width: 767px) {
-      ul.list li,
-      ol.list li {
-        padding-left: 3rem; } }
-    ul.list li:before,
-    ol.list li:before {
-      position: absolute;
-      left: 0.5rem;
-      content: " "; }
-      @media (min-width: 767px) {
-        ul.list li:before,
-        ol.list li:before {
-          left: 1.5rem; } }
-
-ol.list li {
-  counter-increment: list--counter; }
-  ol.list li:before {
-    content: counter(list--counter) "."; }
-
-ul.messages,
-div.message {
-  list-style: none;
-  margin: 0 0 1.5rem 0; }
-
-li.message,
-div.message, li.message--neutral,
-div.message--neutral, li.message--success,
-div.message--success, li.message--alert,
-div.message--alert {
-  border-radius: 0.125rem;
-  font-weight: bold;
-  margin-bottom: 0.25rem;
-  padding: 0.5rem 0.75rem;
-  vertical-align: baseline; }
-
-li.message,
-div.message {
-  background: #59bba3;
-  color: #fff; }
-
-li.message--neutral,
-div.message--neutral {
-  background: #C3CACE;
-  color: #333E42; }
-
-li.message--success,
-div.message--success {
-  background: #ee7147;
-  color: #fff; }
-
-li.message--alert,
-div.message--alert {
-  background: #e7663f;
-  color: #fff; }
-
-ul.pagination {
-  font-size: 0.875rem;
-  list-style: none;
-  margin: 0 0 1.5rem 0;
-  text-align: center; }
-  ul.pagination li {
-    display: inline-block;
-    margin-bottom: 0.25rem; }
-  ul.pagination li.pagination--gap {
-    background: none;
-    padding: 0.25rem 0.5rem; }
-  ul.pagination li.is-selected a {
-    background: #59bba3;
-    color: #fff; }
-    ul.pagination li.is-selected a:hover {
-      background: #46aa92;
-      color: #fff; }
-    ul.pagination li.is-selected a:active, ul.pagination li.is-selected a:focus {
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); }
-  ul.pagination a {
-    background: #C3CACE;
-    border-radius: 0.125rem;
-    color: #333E42;
-    line-height: 1.5em;
-    display: block;
-    padding: 0.25rem 0.5rem; }
-    ul.pagination a:hover {
-      background: #52656E;
-      color: #333E42; }
-    ul.pagination a:active, ul.pagination a:focus {
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); }
-
 .panel, .panel--callout {
   background: #E9EAEB;
   border-radius: 0.125rem;
@@ -942,88 +795,103 @@ ul.pagination {
   background: #59bba3;
   color: #fff; }
 
-blockquote {
-  color: #52656E;
-  font: italic 1.125rem Georgia, serif;
-  line-height: 1.5em;
-  margin-bottom: 1.5rem;
-  padding: 0 0 0 2.5rem;
-  position: relative;
-  quotes: none; }
-  blockquote:before {
-    content: "\201C";
-    display: block;
-    font-size: 5rem;
-    left: -0.5rem;
-    position: absolute;
-    top: 1.5rem; }
-  blockquote cite {
-    display: block;
-    font-size: 0.875rem; }
-    blockquote cite:before {
-      content: "\2014 \0020"; }
+.actions {
+  -webkit-box-flex: 0;
+  -moz-box-flex: 0;
+  box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -moz-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-transition: opacity linear 0.2s, width linear 0s 0.2s;
+  -moz-transition: opacity linear 0.2s, width linear 0s 0.2s;
+  transition: opacity linear 0.2s, width linear 0s 0.2s; }
+  .actions > button {
+    background: #1B2224;
+    border: solid 2px #1B2224;
+    border-radius: 0.313rem;
+    padding: 0.5rem 1rem; }
+  .actions i {
+    margin: 0 0.25rem 0 0;
+    color: #fff; }
+  .actions > span {
+    padding: 0 0.5rem; }
 
-table {
-  border-collapse: collapse;
-  margin: 0.75rem 0;
-  table-layout: fixed;
-  width: 100%; }
-
-thead th {
-  border-bottom: 1px solid #adb5b9;
-  font-weight: bold;
-  padding: 0.75rem 0;
-  text-align: left; }
-
-tbody td {
-  border-bottom: 1px solid #D6DADC;
-  padding: 0.75rem 0; }
-
-tr,
-td,
-th {
-  vertical-align: middle; }
-
-div.tabs {
-  text-align: center; }
-  div.tabs ul {
-    background: #C3CACE;
-    border-radius: 0.125rem;
+.title,
+.story-list--tools {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -moz-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  margin-right: 1.5rem; }
+  .title span,
+  .story-list--tools span {
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -moz-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    margin-right: 0.75rem; }
+  .title input,
+  .story-list--tools input {
     display: inline-block;
-    list-style: none;
-    margin: 0;
-    text-align: center; }
-    div.tabs ul:before, div.tabs ul:after {
-      content: "";
-      display: table; }
-    div.tabs ul:after {
-      clear: both; }
-  div.tabs li {
-    float: left; }
-    div.tabs li:first-child a {
-      border-radius: 0.125rem 0 0 0.125rem; }
-    div.tabs li:last-child a {
-      border-radius: 0 0.125rem 0.125rem 0; }
-    div.tabs li:only-child a {
-      border-radius: 0.125rem; }
-  div.tabs a {
-    color: #333E42;
-    display: block;
-    padding: 0.5rem 0.75rem; }
-    div.tabs a:hover {
-      background: #52656E;
-      color: #333E42; }
-    div.tabs a:active, div.tabs a:focus {
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); }
-  div.tabs li.is-selected a {
-    background: #59bba3;
-    color: #fff;
-    font-weight: bold; }
-    div.tabs li.is-selected a:hover {
-      background: #46aa92;
-      color: #fff; }
-    div.tabs li.is-selected a:active, div.tabs li.is-selected a:focus {
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); }
+    background-color: #72c5b1;
+    border: 0;
+    border-bottom: #86949B 1px dashed;
+    box-shadow: none;
+    color: inherit; }
+    .title input::-webkit-input-placeholder,
+    .story-list--tools input::-webkit-input-placeholder {
+      color: #404E54; }
+    .title input::-moz-placeholder,
+    .story-list--tools input::-moz-placeholder {
+      color: #404E54; }
+    .title input:-moz-placeholder,
+    .story-list--tools input:-moz-placeholder {
+      color: #404E54; }
+    .title input:-ms-input-placeholder,
+    .story-list--tools input:-ms-input-placeholder {
+      color: #404E54; }
+    .title input.tt-hint,
+    .story-list--tools input.tt-hint {
+      color: #404E54; }
 
 .progress-bar {
   background-color: #E9EAEB;
@@ -1094,17 +962,18 @@ input[type="password"] {
   color: #404E54; }
 
 .intro {
-  max-width: 1140px;
+  max-width: auto;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   top: 50%;
   margin-top: -12em;
   max-width: 28em; }
-  .intro::after {
-    clear: both;
-    content: "";
+  .intro:before, .intro:after {
+    content: " ";
     display: table; }
+  .intro:after {
+    clear: both; }
   .intro h1 {
     font-size: 4rem;
     margin-bottom: 0.2222222222rem; }
@@ -1143,17 +1012,18 @@ input[type="password"] {
         opacity: 1; }
 
 .loader {
-  max-width: 1140px;
+  max-width: auto;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   top: 18em;
   max-width: 28em;
   text-align: center; }
-  .loader::after {
-    clear: both;
-    content: "";
+  .loader:before, .loader:after {
+    content: " ";
     display: table; }
+  .loader:after {
+    clear: both; }
   .loader span,
   .loader i {
     font-size: 1.5rem; }
@@ -1215,7 +1085,7 @@ i.writer:before {
     .select > button i {
       position: absolute;
       right: .6em;
-      top: 25%;
+      top: 22%;
       margin: 0;
       color: #354146; }
     .select > button span {
@@ -1666,178 +1536,6 @@ button {
     button.secondary:hover {
       background-color: #2a3337; }
 
-.top-filter {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  height: 3.57rem;
-  background: #46aa92;
-  color: #fff;
-  font-size: 1.5rem;
-  width: 100%;
-  padding: 0 1.5rem;
-  position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2000;
-  -webkit-transition: background cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.1s, opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
-  -moz-transition: background cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.1s, opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s;
-  transition: background cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.1s, opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s 0.7s; }
-  .top-filter .actions {
-    -webkit-transition: opacity linear 0.2s, width linear 0s 0.2s;
-    -moz-transition: opacity linear 0.2s, width linear 0s 0.2s;
-    transition: opacity linear 0.2s, width linear 0s 0.2s; }
-  .top-filter > * {
-    cursor: pointer; }
-  .top-filter > i,
-  .top-filter .prefix i {
-    -webkit-box-flex: 0;
-    -moz-box-flex: 0;
-    box-flex: 0;
-    -webkit-flex: 0 0 auto;
-    -moz-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    font-size: 1.57rem;
-    margin-right: 1.5rem;
-    color: #1B2224; }
-  .top-filter i {
-    margin-top: 2px; }
-
-.title, .story-list--tools {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  -moz-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  margin-right: 1.5rem; }
-  .title span, .story-list--tools span {
-    -webkit-box-flex: 0;
-    -moz-box-flex: 0;
-    box-flex: 0;
-    -webkit-flex: 0 0 auto;
-    -moz-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    margin-right: 0.75rem; }
-  .title input, .story-list--tools input {
-    display: inline-block;
-    background-color: #72c5b1;
-    border: 0;
-    border-bottom: #86949B 1px dashed;
-    box-shadow: none;
-    color: inherit; }
-    .title input::-webkit-input-placeholder, .story-list--tools input::-webkit-input-placeholder {
-      color: #404E54; }
-    .title input::-moz-placeholder, .story-list--tools input::-moz-placeholder {
-      color: #404E54; }
-    .title input:-moz-placeholder, .story-list--tools input:-moz-placeholder {
-      color: #404E54; }
-    .title input:-ms-input-placeholder, .story-list--tools input:-ms-input-placeholder {
-      color: #404E54; }
-    .title input.tt-hint, .story-list--tools input.tt-hint {
-      color: #404E54; }
-
-.actions {
-  -webkit-box-flex: 0;
-  -moz-box-flex: 0;
-  box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -moz-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center; }
-  .actions > button {
-    background: #1B2224;
-    border: solid 2px #1B2224;
-    border-radius: 0.313rem;
-    padding: 0.5rem 1rem; }
-  .actions > span {
-    padding: 0 0.5rem; }
-
-.filters {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -moz-flex: 1 0 auto;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center; }
-  .filters > span {
-    margin-right: 0.75rem; }
-  .filters > span:not(:only-child) {
-    display: none; }
-  .filters > i {
-    color: #fff;
-    margin-right: 0.75rem; }
-  .filters > div {
-    margin-right: 3rem; }
-  .filters button i {
-    margin-top: -1px; }
-
 ul.story-list {
   padding: 1.5rem;
   border-radius: 0.125rem; }
@@ -1923,10 +1621,6 @@ ul.story-list {
     padding: 0.75rem; }
     ul.story-list .actions .separate {
       margin: 0 0.25rem; }
-  ul.story-list i {
-    font-size: 1.2rem;
-    width: 1.5rem;
-    text-align: center; }
 
 li.story-list--header:not(:last-of-type) {
   margin-bottom: 1.5rem; }
@@ -2069,105 +1763,10 @@ header {
       color: #fff;
       margin: 0 0.75rem 0 0; }
     header .filters > div {
-      margin-right: 3rem; }
-
-.actions {
-  -webkit-box-flex: 0;
-  -moz-box-flex: 0;
-  box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -moz-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-transition: opacity linear 0.2s, width linear 0s 0.2s;
-  -moz-transition: opacity linear 0.2s, width linear 0s 0.2s;
-  transition: opacity linear 0.2s, width linear 0s 0.2s; }
-  .actions > button {
-    background: #1B2224;
-    border: solid 2px #1B2224;
-    border-radius: 0.313rem;
-    padding: 0.5rem 1rem; }
-  .actions i {
-    margin: 0 0.25rem 0 0;
-    color: #fff; }
-  .actions > span {
-    padding: 0 0.5rem; }
-
-.title,
-.story-list--tools {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1 1 auto;
-  -moz-flex: 1 1 auto;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  margin-right: 1.5rem; }
-  .title span,
-  .story-list--tools span {
-    -webkit-box-flex: 0;
-    -moz-box-flex: 0;
-    box-flex: 0;
-    -webkit-flex: 0 0 auto;
-    -moz-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    margin-right: 0.75rem; }
-  .title input,
-  .story-list--tools input {
-    display: inline-block;
-    background-color: #72c5b1;
-    border: 0;
-    border-bottom: #86949B 1px dashed;
-    box-shadow: none;
-    color: inherit; }
-    .title input::-webkit-input-placeholder,
-    .story-list--tools input::-webkit-input-placeholder {
-      color: #404E54; }
-    .title input::-moz-placeholder,
-    .story-list--tools input::-moz-placeholder {
-      color: #404E54; }
-    .title input:-moz-placeholder,
-    .story-list--tools input:-moz-placeholder {
-      color: #404E54; }
-    .title input:-ms-input-placeholder,
-    .story-list--tools input:-ms-input-placeholder {
-      color: #404E54; }
-    .title input.tt-hint,
-    .story-list--tools input.tt-hint {
-      color: #404E54; }
+      margin-right: 1.5rem; }
+    @media (min-width: 960px) {
+      header .filters .select {
+        display: block !important; } }
 
 nav.navigation {
   -webkit-transition: left cubic-bezier(0, 0, 0.2, 1) 0.5s;
