--- a/app/scss/shared-components/_story-list.scss
+++ b/app/scss/shared-components/_story-list.scss
@@ -52,11 +52,11 @@ ul.story-list {
         .separate { margin: 0 0.25rem;}
     }
 
-    i {
-    	font-size: 1.2rem;
-    	width: 1.5rem;
-    	text-align: center;
-    }
+    // i {
+    // 	font-size: 1.2rem;
+    // 	width: 1.5rem;
+    // 	text-align: center;
+    // }
 
 }
 
