--- a/app/views/modules/writer/story.html
+++ b/app/views/modules/writer/story.html
@@ -1,4 +1,4 @@
-<div class="top-filter">
+<header>
     <div class="prefix">
         <i class="fa" ng-class="{'fa-chevron-left': !story.createNew, 'fa-times': story.createNew}"
            ng-click="story.back()"></i>
@@ -18,7 +18,7 @@
            ng-class="{'fa-search-minus': story.sidebarIsExpanded(), 'inactive fa-search-plus': !story.sidebarIsExpanded()}"></i>
         </span>
     </div>
-</div>
+</header>
 <div class="has-aside">
     <div class="content">
         <ul class="story-list" story-collapse>
