--- a/app/scss/shared-components/_icons.scss
+++ b/app/scss/shared-components/_icons.scss
@@ -1,14 +1,39 @@
 // =========== Icons 
 
-// svg.icon {
-//     height: 16px;
-//     width: 16px;
-//     display: inline-block;
+%icon {
+    display: inline-block;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
-//     &.is-inline {
-//         position: relative;
-//         top: 0.15rem;
-//         margin: 0 0.25rem;
-//     }
-// }
+i.success:before {
+    content: '\f00c';
+}
 
+i.failed:before {
+    content: '\f00d';
+}
+
+i.skipped:before {
+    content: '\f127';
+}
+
+i.blocked:before {
+    content: '\f05e';
+}
+
+i.runner:before {
+    content: '\f04b';
+}
+
+i.organizer:before {
+    content: '\f114';
+}
+
+i.writer:before {
+    content: '\f040';
+}
